Fix scroll behaviour to respect reduced motion apply to all scroll containers and add a scroll padding

--- a/css/default.css
+++ b/css/default.css
@@ -1,8 +1,11 @@
 @import url(/css/colors.css);
 @import url(/css/buttons.css);
 
-:root {
-	scroll-behavior: smooth;
+@media (prefers-reduced-motion: no-preference) {
+    html, :has(:target) {
+    	scroll-behavior: smooth;
+        scroll-padding: 1.6rem;
+    }
 }
 
 * {
